src/test/ui/issues/issue-48364.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-48364.rs:2:9
   |
LL |     b"".starts_with(stringify!(foo))
   |         ^^^^^^^^^^^ --------------- expected `&[u8]`, found `&'static str`
   |
help: provide an argument of the correct type
   |
LL |     b"".({&[u8]})(stringify!(foo))
   |         ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
